--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
         "sass": "^1.52.1"
     },
     "scripts": {
-        "compile": "sass --watch --no-source-map scss/main.scss css/main.css"
+        "compile": "sass --watch --no-source-map scss/import.scss css/main.css"
     }
 }
